about page ready

--- a/src/pages/HomePage/HomePage.module.sass
+++ b/src/pages/HomePage/HomePage.module.sass
@@ -85,7 +85,7 @@
 
             img
                 position: absolute
-                left: 290px
+                left: 280px
 
 
         .infoBlock
@@ -112,6 +112,7 @@
                     line-height: 144px
                     font-weight: 800
                     font-family: steelfish
+                    color: #f4444a
 
                 .par
                     margin: 0
@@ -151,7 +152,7 @@
                     font-family: steelfish
                     font-size: 120px
                     font-weight: 800
-                    color: #BC1606
+                    color: black
 
 
                 .date, .date1
@@ -159,6 +160,7 @@
                     font-weight: 800
                     font-family: steelfish
                     margin-top: 100px
+                    color: #f4444a
 
                     
                         
@@ -210,6 +212,7 @@
                 font-size: 120px
                 font-weight: 800
                 font-family: Steelfish
+                color: #f4444a
                 
 
             .par    
