--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,39 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  ::-webkit-scrollbar {
+    width: 4px; /* Ширина скроллбара */
+  
+  }
+  
+  
+  /* Ползунок внутри скроллбара */
+  ::-webkit-scrollbar-thumb {
+    background-color: #cfcfcf; /* Цвет ползунка */
+    border-radius: 10px; /* Радиус скругления */
+  }
+  
+  /* Фон скроллбара */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Цвет фона трека */
+    background: none;
+  }
+  
+  /* Примерное оформление для остальных браузеров */
+  ::-moz-scrollbar {
+    width: 4px;
+  }
+  
+  ::-moz-scrollbar-thumb {
+    background-color: #cfcfcf;
+    border-radius: 4px;
+    background: none;
+  }
+  
+  ::-moz-scrollbar-track {
+    background: none;
+    
+  }
 }
 
 code {
@@ -17,3 +50,8 @@ p{
   font-family: "Inter", system-ui;
   margin: 0
 }
+
+h1, h2, h3, h4, h5, h6{
+  margin: 0;
+}
+
