--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -2,10 +2,13 @@
     font-family: 'steelfish'
     src: url('../fonts/stelfish/steelfish.otf')
 
+.mobileContainer
+    display: none
     
 .container
     width: 220px
     height: 100vh
+    
 
     background: #111111
 
@@ -19,8 +22,11 @@
     position: fixed
 
     z-index: 100
+
+    
     .logo
         width: 152.2px
+        cursor: pointer
         height: 40px
 
     .par
@@ -126,3 +132,32 @@
             color: white
 
             
+@media screen and ( max-width:  1000px)
+    .container
+        display: none
+    .mobileContainer
+        display: flex
+        flex-direction: row
+
+        justify-content: space-between
+        align-items: center
+
+        width: 100%
+        height: 100%
+
+
+        .logo
+            width: 114px
+            z-index: 1
+        .burgerMenuBtn
+            width: 25px
+            z-index: 1
+
+        .light
+            position: absolute
+            z-index: 2
+            width: 50%
+            left: 25%
+            
+            object-fit: cover
+            height: 60px        
