--- a/src/pages/HomePage/HomePage.module.sass
+++ b/src/pages/HomePage/HomePage.module.sass
@@ -8,11 +8,8 @@
     place-items: center
 
     width: 100%
-    margin-left: 290px
     
-    
-    
-
+    margin: 0 !important
     .innerContainer
         display: flex
         flex-direction: column
@@ -24,11 +21,16 @@
         height: auto
         // height: 1399px  
         width: 100%
-        margin-left: 20px
+
+        *
+            // outline: 1px solid black
+        
+
 
         .light
             // opacity: 0.4
             position: absolute
+            width: 70%
             z-index: 0
             pointer-events: none
 
@@ -44,8 +46,11 @@
             margin-top: 100px
 
         .redTitle
-            color: #F4444A
+            color: #ca252a
             margin-top: 54px
+
+        .mobileLines
+            display: none
 
 
         .buttons
@@ -57,6 +62,7 @@
 
             gap: 24px
             z-index: 1
+            
             margin-top: 72px
             
             .left, .right
@@ -71,28 +77,39 @@
 
                 background: none
                 cursor: pointer
+                order: 0
 
             .right
                 width: 372px
                 height: 70px
+                order: 1
 
                 background: black
                 color: white
                 border: 1px solid black
+                
+                .mobileBR
+                    display: none
 
         .lines
-            margin-top: 100px
+            margin-top: 80px
+            
+            
+            
 
             img
                 position: absolute
-                left: 280px
+                width: 90%
+                left: 14%
 
 
         .infoBlock
             display: flex
             flex-direction: row
+            justify-content: center
+            align-items: flex-start
 
-            width: 1052px
+            width: 100%
             
             gap: 200px
 
@@ -109,10 +126,10 @@
                 width: 464px
                 .title
                     font-size: 120px
-                    line-height: 144px
+                    
                     font-weight: 800
                     font-family: steelfish
-                    color: #f4444a
+                    color: #ca252a
 
                 .par
                     margin: 0
@@ -160,7 +177,7 @@
                     font-weight: 800
                     font-family: steelfish
                     margin-top: 100px
-                    color: #f4444a
+                    color: #ca252a
 
                     
                         
@@ -179,7 +196,7 @@
                     margin: 0
                     margin-top: 16px
                     font-family: "Inter", system-ui
-                    font-size: 18px
+                    font-size: 17px
                     font-weight: 500
 
 
@@ -212,7 +229,7 @@
                 font-size: 120px
                 font-weight: 800
                 font-family: Steelfish
-                color: #f4444a
+                color: #ca252a
                 
 
             .par    
@@ -226,12 +243,166 @@
             .row
                 margin-top: 100px
 
-        .border
-            width: 100%
+        
 
         
         .joury
         
             background: white
             width: 100%
+
+            display: flex
+            flex-direction: column
+
+            justify-content: center
+            align-items: center
+
+
             
+
+@media screen and ( max-width:  1350px)
+    .container
+        .innerContainer
+            .title, .redTitle
+                font-size: 80px
+                margin-top: 50px
+
+            .redTitle
+                margin-top: 30px
+
+            .lines
+                margin-top: 50px
+
+            .infoBlock
+                gap: 50px
+                align-items: flex-start
+
+                .left
+                    width: 300px
+
+                    .title
+                        font-size: 70px
+
+                    .par
+                        font-size: 17px
+                        line-height: 28 px
+                        margin-top: 30px
+
+                    button
+                        margin-top: 30px
+
+                .right
+                    width: 300px
+                    img
+                        width: 100%
+                    .title
+                        font-size: 70px
+
+                    .date, .date1
+                        margin-top: 50px
+
+            .partners
+                width: 700px
+
+                .title
+                    font-size: 80px
+
+                .par
+                    font-size: 18px
+                    line-height: 28px
+
+                .row
+                    width: 95%
+
+@media screen and ( max-width:  1000px)
+    .container
+        .innerContainer
+            padding-bottom: 50px
+            
+            .title, .redTitle
+                font-size: 66px
+                width: 300px
+                line-height: 100%
+
+                margin-top: 43px
+
+            .redTitle
+                margin-top: 0
+
+            .lines
+                display: none
+
+            .mobileLines
+                margin-top: 10px
+                display: flex
+                padding-bottom: 30px
+                
+                
+                
+                
+
+                img
+                    position: absolute
+                    width: 110vw
+                    left: -5vw
+
+            .buttons    
+                flex-direction: column
+                
+
+                .left, .right
+                    width: 320px
+                    
+                    
+                .right
+                    height: 92px
+                    white-space: normal // разрешаем перенос текста
+                    word-wrap: break-word
+
+                    .mobileBR
+                        display: flex
+                        
+
+            .infoBlock
+                flex-direction: column
+                gap: 0
+                width: 100vw
+
+                justify-content: center
+                align-items: center
+                margin-top: 100px
+
+                .left, .right
+
+                    .title
+                        font-size: 60px
+                        text-align: left
+
+                    .par
+                        margin-top: 50px
+                        line-height: 180%
+
+                    button
+                        width: 286px
+
+            .image
+                width: 100vw
+                height: 309px
+                object-fit: cover
+
+
+            .partners
+                width: 100vw
+                margin-top: 60px
+
+                .title
+                    text-align: left
+                    font-size: 60px
+
+                .title, .par
+                    margin-left: 16px
+
+                .row
+                    width: 200vw
+                    overflow-x: scroll
+                    
