--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -69,6 +69,7 @@
         height: 487px
         flex-direction: column  
         padding: 0 16px 50px 16px
+        overflow-x: hidden
 
         .left, .right
             width: 358px
