--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -142,16 +142,18 @@
         justify-content: space-between
         align-items: center
 
-        width: 100%
+        width: 100vw
         height: 100%
 
 
         .logo
             width: 114px
             z-index: 1
+            margin-left: 16px
         .burgerMenuBtn
             width: 25px
             z-index: 1
+            margin-right: 16px
 
         .light
             position: absolute
@@ -159,5 +161,9 @@
             width: 50%
             left: 25%
             
-            object-fit: cover
-            height: 60px        
+            
+            height: 150px     
+            margin-top: 80px
+            
+            
+
