--- a/src/components/Questions/Questions.module.sass
+++ b/src/components/Questions/Questions.module.sass
@@ -77,12 +77,13 @@
 
 @media screen and ( max-width:  1000px)
     .container
+        height: 1832px
         .innerContainer
             .title
                 font-size: 60px
                 width: 100%
                 text-align: left
-                margin-left: 16px
+                
 
             .questions
                 margin-bottom: 150px
@@ -99,3 +100,5 @@
                         font-size: 16px
                         line-height: 180%
                         margin-top: 40px
+                        
+                        
