--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -65,10 +65,10 @@
 
 @media screen and ( max-width:  1000px)
     .container
-        width: 100vw
+        width: 100%
         height: 487px
         flex-direction: column  
-        padding: 0 16px 50px 16px
+        padding: 0 0px 50px 0px
         overflow-x: hidden
 
         .left, .right
