--- a/src/components/Layout/Layout.module.sass
+++ b/src/components/Layout/Layout.module.sass
@@ -34,17 +34,19 @@
         display: flex
         flex-direction: column
 
-        justify-content: center
-        align-items: center
+        justify-content: flex-start
+        align-items: flex-start
+        
 
         // padding: 17px 16px 16px 16px
 
         .header
             height: 62px !important
-            width: 100%
+            width: 100% !important
 
         .outlet
             width: 100vw !important
+            
     
 
 
