--- a/src/components/Layout/Layout.module.sass
+++ b/src/components/Layout/Layout.module.sass
@@ -8,7 +8,7 @@
     .container
         display: flex
         flex: 1
-        background: #F0EFEC
+        // background: #F0EFEC
 
         .header
             width: 300px !important
