--- a/src/components/Questions/Questions.module.sass
+++ b/src/components/Questions/Questions.module.sass
@@ -86,7 +86,7 @@
                 
 
             .questions
-                margin-bottom: 150px
+                // margin-bottom: 150px
                 .questionBlock
                     .question
                         height: auto
