--- a/src/pages/HomePage/HomePage.module.sass
+++ b/src/pages/HomePage/HomePage.module.sass
@@ -31,6 +31,8 @@
         .images
             display: none
 
+        .rowDiv
+            display: none
         .light
             // opacity: 0.4
             position: absolute
@@ -274,13 +276,14 @@
         .joury
         
             background: white
-            width: 100%
+            
 
             display: flex
             flex-direction: column
 
             justify-content: center
             align-items: center
+            // margin-left: 80px
 
 
             
@@ -356,6 +359,10 @@
 
                 margin-top: 43px
 
+            .joury
+                // width: 90vw
+                
+
             .redTitle
                 margin-top: 0
 
@@ -381,6 +388,7 @@
                 flex-direction: column
                 margin-top: 32px
                 
+                
 
                 .left, .right
                     width: 320px
@@ -397,6 +405,17 @@
                     .mobileBR
                         display: flex
                         
+            .rowDiv
+                display: flex
+                width: 100vw
+
+                overflow-x: scroll
+
+                
+                    
+
+            .row
+                display: none
 
             .infoBlock
                 flex-direction: column
@@ -443,8 +462,8 @@
                                 
 
                     button
-                        width: 376px
-                        margin-left: -9px
+                        width: 95%
+                        
                         margin-top: 16px
                                 
                                
@@ -474,8 +493,7 @@
 
                 .rowDiv
                     overflow-x: scroll
-                    width: 200vw
-                    .row
-                        width: 100%
+                    width: 95%
+                    
                         
                     
