--- a/src/pages/JouryPage/JouryPage.module.sass
+++ b/src/pages/JouryPage/JouryPage.module.sass
@@ -133,6 +133,44 @@
             p
                 margin: 16px 0 0 0
 
+    .questions
+        width: 100%
+        background: #F0EFEC
+        padding-left: 80px
 
+@media screen and ( max-width:  1000px)
+    .container
+        justify-content: center
+        align-items: center
 
-    
+        .crumbs
+            display: none
+
+        .about
+            margin: 0
+
+            h1
+                font-size: 70px
+                margin-top: 30px
+            p
+                margin-top: 20px
+                font-size: 18px
+
+        .selectBlock
+            margin-top: 20px
+
+            h3, select > option, select 
+                color: black
+
+        .peoples
+            margin-top: 40px    
+
+            
+
+        .questions
+            width: 100%
+
+            display: grid
+            place-items: center
+            background: #F0EFEC
+            padding: 0
