--- a/src/pages/Nominations/Nominations.module.sass
+++ b/src/pages/Nominations/Nominations.module.sass
@@ -150,3 +150,90 @@
                     background: white
                     cursor: pointer
                     margin-top: 32px
+
+    .questions
+        width: 100%
+        background: #F0EFEC
+        padding-left: 80px
+
+
+
+@media screen and ( max-width:  1000px)
+    .container
+        justify-content: flex-start
+        align-items: flex-start
+
+        .crumbs
+            display: none
+
+        .about
+            margin: 0
+            width: 100%
+            display: grid
+            place-items: center
+            
+
+            h1
+                font-size: 70px
+                text-align: center
+
+                margin-top: 30px  
+                  
+
+            p
+                
+                width: 100%
+                margin-top: 20px    
+                text-align: center    
+                width: 95%
+                
+
+        .criterion
+            padding: 0
+            align-items: center
+            width: 100%
+
+            .title
+                font-size: 70px
+                margin-top: 50px
+                text-align: center
+
+            .par
+                margin-top: 20px
+                width: 100%
+                text-align: center
+
+            .row
+                width: 95%
+
+            .blocks
+                flex-direction: column
+                width: 100%
+
+                justify-content: center
+                align-items: center
+
+                .block
+                    width: 90%
+                    padding: 0
+
+                    .title
+                        margin: 15px 0 0 15px
+                        text-align: left
+
+                    .list
+                        width: 100%
+                        margin: 25px 0 0 15px
+
+                    button
+                        margin: 25px 0 0 15px
+                        color: black
+                        border: 1px solid black
+
+        .questions
+            width: 100%
+
+            display: grid
+            place-items: center
+            background: #F0EFEC
+            padding: 0
