--- a/src/components/Joury/Joury.module.sass
+++ b/src/components/Joury/Joury.module.sass
@@ -5,10 +5,8 @@
     justify-content: flex-start
     align-items: flex-start
     background: white
-    width: 80% /* Адаптивная ширина */
-    height: 900px
-    
-
+    width: 100%
+    overflow: hidden
 
     .title
         margin: 0
@@ -16,6 +14,7 @@
         font-weight: 800
         font-family: Steelfish
         text-align: left
+        margin-left: 80px
 
     .par    
         margin-top: 50px
@@ -23,47 +22,49 @@
         font-size: 22px
         font-weight: 400
         font-family: "Inter", system-ui
+        text-align: center
+        max-width: 90%
+        margin-left: 80px
         text-align: left
 
     .buttons
         margin-top: 40px
         display: flex
-        justify-content: flex-start
+        justify-content: space-between
+        gap: 20px
+        margin-left: 80px
+
+        .leftBtn, .rightBtn
+            cursor: pointer
+            width: 64px
 
         .leftBtn
             transform: rotate(180deg)
-            cursor: pointer
-            
-
-        .rightBtn
-            cursor: pointer
-            margin-left: 40px
-            
 
     .peoples
-        background: white
+        position: relative
         display: flex
-        flex-direction: row
-        justify-content: flex-start
-        align-items: center
-        gap: 40px
-        margin-top: 400px
+        width: 100%
+        height: 500px
+        overflow: hidden
+        margin-top: 60px
+        margin-left: 80px
         
-        
-        position: absolute
-        transition: .5s
-        width: max-content /* Позволяет блокам занимать нужное пространство */
-
         .block
+            position: absolute
+
+            top: 0
+            left: 0
+            width: 35.66%
+            height: 100%
             display: flex
             flex-direction: column
             justify-content: flex-start
             align-items: flex-start
-            width: 233px
-            height: 456px
+            transition: transform 0.5s ease-in-out
             cursor: pointer
             img
-                width: 100%
+                width: 233px
                 height: 350px
                 object-fit: cover
             h4
@@ -75,73 +76,62 @@
             p
                 margin: 16px 0 0 0
 
-/* Адаптивность для планшетов и мобильных устройств */
+        &.active
+            transform: translateX(0%)
+
 @media screen and (max-width: 1024px)
     .joury
         padding-left: 16px
         padding-top: 0
-        width: 100vw
-        
         
         .title
             font-size: 80px
             margin-top: 60px
-            color: #ca252a
         .par
             font-size: 18px
             line-height: 30px
             margin-top: 40px
 
-        .buttons 
-            z-index: 2
+    .buttons 
+        z-index: 2
+        
         .peoples
-            gap: 20px
-            padding-top: 50px
-            padding-bottom: 30px
+            height: 400px
+            margin-left: 16px
+            
             .block
-                width: 180px
-                height: 400px
                 img
-                    height: 300px
+                    width: 180px
+                    height: 280px
                 h4
                     font-size: 28px
 
-// @media screen and (max-width: 768px)
-//     .joury
-//         padding-left: 20px
-//         .title
-//             font-size: 60px
-//         .par
-//             font-size: 16px
-//             line-height: 26px
-//         .peoples
-//             flex-direction: column
-//             align-items: flex-start
-//             gap: 20px
-//             .block
-//                 width: 100%
-//                 height: auto
-//                 img
-//                     width: 100%
-//                     height: auto
-//                 h4
-//                     font-size: 24px
+@media screen and (max-width: 767px)
+    .joury
+        margin-left: 16px
+        height: 950px
+        align-items: flex-start
+        width: 90%
+        .title
+            font-size: 60px
+            color: #ca252a
+            margin-left: 0
+            
+        .par
+            font-size: 16px
+            line-height: 26px
+            margin-left: 0
+            text-align: left
 
-// @media screen and (max-width: 480px)
-//     .joury
-//         padding-left: 10px
-//         .title
-//             font-size: 40px
-//         .par
-//             font-size: 14px
-//             line-height: 22px
-//         .peoples
-//             gap: 10px
-//             padding-top: 30px
-//             padding-bottom: 30px
-//             .block
-//                 width: 100%
-//                 img
-//                     height: auto
-//                 h4
-//                     font-size: 20px
+        .buttons
+            margin-left: 0
+        .peoples
+            height: 500px
+            margin-left: 0px
+            .block
+                width: 105.66%
+                img
+                    width: 233px
+                    height: 350px
+                h4
+                    font-size: 35px
