--- a/src/pages/ContactPage/ContactPage.module.sass
+++ b/src/pages/ContactPage/ContactPage.module.sass
@@ -87,3 +87,11 @@
         margin-left: 80px
         margin-top: 100px
         margin-bottom: 120px
+
+    .questions
+        width: 100%
+
+        display: grid
+        place-items: center
+        background: #F0EFEC
+        padding: 0
