--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -24,7 +24,29 @@
     z-index: 100
 
 
+    .name
+        display: flex
+        flex-direction: column
 
+
+        justify-content: flex-start
+        align-items: flex-start
+        margin-top: 24px
+
+        h5
+            font-family: "Steelfish", sans-serif
+            font-weight: 700
+            font-size: 34px
+            
+            color: #fff
+
+        p
+            font-family: "Montserrat", sans-serif
+            font-weight: 500
+            font-size: 14px
+            line-height: 180%
+            letter-spacing: -0.03em
+            color: #d6d6d6
     
     .logo
         width: 152.2px
@@ -67,6 +89,7 @@
         padding: 24px 0
         width: 100%
         border-bottom: 1px solid #ffffff39
+        cursor: pointer
 
         .dataText
             font-family: steelfish
