--- a/src/pages/AuthorizationPage/AuthorizationPage.module.sass
+++ b/src/pages/AuthorizationPage/AuthorizationPage.module.sass
@@ -87,6 +87,8 @@
                 border: 1px solid rgba(2, 2, 4, 0.1)
                 padding: 12px 16px
 
+                font-size: 18px
+
                 &::placeholder
                     font-family: "Inter", system-ui
                     font-weight: 400
@@ -113,6 +115,36 @@
                 border: none
                 margin-bottom: 50px
 
+        .codeText
+            font-family: "Montserrat", sans-serif
+            font-weight: 500
+            font-size: 18px
+            line-height: 180%
+            color: #b0b0b0
+            width: 350px
+
+        .inputCode
+            display: flex
+            flex-direction: row
+
+            justify-content: center
+            align-items: center
+
+            gap: 24px
+            margin: 40px 0 50px 0
+
+            input
+                margin: 0 !important
+
+            button
+                padding: 16px 12px
+                width: 94px
+                height: 56px
+                background: #020204
+                margin: 0
+
+        
+
     .questions
         width: 100%
 
@@ -121,3 +153,30 @@
         background: #F0EFEC
         padding: 0
                 
+
+@media screen and ( max-width:  1000px)
+    .container
+        .innerContainer
+            width: 90%
+            justify-content: center
+            align-items: center
+
+            .crumbs
+                display: none
+
+            .title
+                font-size: 70px
+                text-align: center
+                padding-bottom: 20px
+                margin-top: 20px
+
+            .loginContainer
+                .par
+                    font-size: 18px
+                    text-align: center
+
+                .input
+                    width: 300px
+
+            .inputCode
+                flex-direction: column
